# arvel-starter

./: .dockerignore  .editorconfig  .env.example  .env.j2  .env.testing  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.md.j2  docker-compose.yml  docker-compose.yml.j2  pyproject.toml  pyproject.toml.j2  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ci.yml.j2  release.yml  release.yml.j2
app/: __init__.py
app/events/: __init__.py  user_created.py
app/http/: __init__.py
app/jobs/: __init__.py  prune_expired_tokens_job.py  send_welcome_email_job.py
app/listeners/: __init__.py  send_welcome_email_listener.py
app/mail/: __init__.py  welcome_mail.py
app/models/: user.py
app/notifications/: __init__.py  welcome_notification.py
app/observers/: __init__.py  user_observer.py
app/providers/: __init__.py  auth_provider.py  data_provider.py  event_provider.py  observability_provider.py
app/repositories/: __init__.py  user_repository.py
bootstrap/: app.py  providers.py
config/: app.py  auth.py  broadcasting.py  cache.py  database.py  http.py  lock.py  mail.py  media.py  notifications.py  observability.py  queue.py  scheduler.py  search.py  security.py  session.py  storage.py
database/factories/: user_factory.py
database/migrations/: 001_create_users_table.py  002_create_auth_refresh_tokens.py  (+6 more)
lang/: en.json  fr.json
routes/: api.py  web.py.j2
tests/: conftest.py
(+66 files in other folders)
